--- a/Pecan.Interface/Pecan.Interface.csproj
+++ b/Pecan.Interface/Pecan.Interface.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pecan.Entities\Pecan.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
